# AloneMusic

./: .pre-commit-config.yaml  Dockerfile  LICENSE  Procfile  README.md  app.json  app.py  config.py  cookies.txt  docker-compose.yml  heroku.yml  koyeb.yaml  pyproject.toml  requirements.txt  setup  sourcery.yaml  start
.github/: CODEOWNERS  CONTRIBUTING.md  FUNDING.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: main.yml
AaradhyaMusic/: __init__.py
AloneMusic/: Apple.py  Resso.py  Youtube.py  __init__.py  __main__.py  logging.py  misc.py
AloneMusic/AloneMusic/: thumbnails.py
AloneMusic/core/: bot.py  call.py  dir.py  git.py  mongo.py  userbot.py
AloneMusic/plugins/: __init__.py  active.py  auth.py  autoleave.py  channel.py  help.py
AloneMusic/plugins/admins/: auth.py  callback.py  loop.py  pause.py  resume.py  seek.py  shuffle.py  skip.py  speed.py  stop.py
AloneMusic/plugins/bot/: help.py  inline.py  settings.py  start.py
AloneMusic/plugins/misc/: autoleave.py  broadcast.py  seeker.py  watcher.py
AloneMusic/plugins/play/: channel.py  live.py  play.py  playmode.py
AloneMusic/plugins/sudo/: autoend.py  blchat.py  block.py  gban.py  leaveall.py  logger.py  logs.py  maintenance.py  restart.py  sudoers.py
AloneMusic/plugins/tools/: active.py  dev.py  disk.py  language.py  leave.py  ping.py  queue.py  reload.py  speedtest.py  stats.py
AloneMusic/utils/: __init__.py  admins.py  channelplay.py  database.py  exceptions.py  extraction.py  formatters.py  inlinequery.py  logger.py  pastebin.py  sys.py  thumbnails.py
AloneMusic/utils/decorators/: __init__.py  admins.py  language.py  play.py
AloneMusic/utils/inline/: __init__.py  extras.py  help.py  play.py  queue.py  settings.py  speed.py  start.py  stats.py
AloneMusic/utils/stream/: autoclear.py  queue.py  stream.py
TheAloneMusic/: __init__.py
cookies/: cookies.txt
strings/: __init__.py  helpers.py
strings/langs/: en.yml
