[project]
name = "AloneMusic"
version = "0.1.0"
description = "Telegram music bot by TheAloneTeam"
authors = [
  { name = "TheAloneTeam", email = "thealoneteam@users.noreply.github.com" }
]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
  "aiofiles",
  "aiohttp",
  "apscheduler",
  "beautifulsoup4",
  "dnspython",
  "ffmpeg-python",
  "gitpython",
  "hachoir",
  "heroku3",
  "humanize",
  "motor",
  "Pillow==9.5.0",
  "psutil",
  "httpx==0.27.2",
  "py-tgcalls==0.9.7",
  "pykeyboard",
  "pyrofork",
  "python-dotenv",
  "pyyaml",
  "requests",
  "speedtest-cli",
  "spotipy",
  "tgcrypto",
  "unidecode",
  "yt-dlp>=2025.01.15",
  "youtube-search",
  "youtube-search-python"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
