[build-system]
requires = ["setuptools==80.9.0"]
build-backend = "setuptools.build_meta"

[project]
name = "AloneMusic"
version = "0.1.0"
description = "🎵 Telegram Music Bot by TheAloneTeam"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "TheAloneTeam", email = "thealoneteam@users.noreply.github.com" }
]
keywords = ["telegram", "music", "bot", "pyrogram", "pytgcalls"]
classifiers = [
  "Environment :: Console",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Utilities",
]

dependencies = [
    "aiofiles==24.1.0",
    "aiohttp==3.12.15",
    "apscheduler==3.10.6",
    "beautifulsoup4==4.14.2",
    "dnspython==2.4.2",
    "ffmpeg-python==0.3.0",
    "gitpython==3.1.45",
    "hachoir==3.1.4",
    "heroku3==5.2.1",
    "humanize==4.9.0",
    "motor==4.3.3",
    "Pillow==9.5.0",
    "psutil==7.1.0",
    "httpx==0.27.2",
    "py-tgcalls==0.9.7",
    "pykeyboard==0.8.0",
    "pyrofork==0.1.5",
    "python-dotenv==1.1.1",
    "pyyaml==6.0.3",
    "requests==2.32.1",
    "speedtest-cli==2.1.3",
    "spotipy==2.25.1",
    "tgcrypto==1.2.5",
    "unidecode==1.3.6",
    "yt-dlp>=2025.01.15",
    "youtube-search==1.6.6",
    "youtube-search-python==1.6.9"
]

[tool.setuptools.packages.find]
include = ["AloneMusic", "core", "config", "strings"]

[project.urls]
Repository = "https://github.com/TheAloneTeam/AloneMusic"
Issues = "https://github.com/TheAloneTeam/AloneMusic/issues"
Changelog = "https://github.com/TheAloneTeam/AloneMusic/blob/master/CHANGELOG.md"

[project.scripts]
alonemusic = "AloneMusic.__main__:main"
